// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`matches expected output: BookingDetail.graphql 1`] = `
~~~~~~~~~~ INPUT ~~~~~~~~~~
fragment RouteStopFragment on RouteStop {
  cityName
  cityId
  time {
    utc
    local
  }
}

{
  bookingDetail(id:"Q3VzdG9tZXJCb29raW5nOjE2NDYzNDQ3") {
    id
    status
    arrival {
      ...RouteStopFragment
    }
    departure {
      ...RouteStopFragment
    }
    destinationImageUrl
    passengerCount
  }
}

~~~~~~~~~~ OUTPUT ~~~~~~~~~~
{
  "data": {
    "bookingDetail": {
      "id": "Qm9va2luZ09uZVdheToxNjQ2MzQ0Nw==",
      "status": "closed",
      "arrival": {
        "cityName": "Las Palmas",
        "cityId": "las-palmas_es",
        "time": {
          "utc": "2018-11-28T16:20:00.000Z",
          "local": "2018-11-28T16:20:00.000Z"
        }
      },
      "departure": {
        "cityName": "Vienna",
        "cityId": "vienna_at",
        "time": {
          "utc": "2018-11-28T11:20:00.000Z",
          "local": "2018-11-28T12:20:00.000Z"
        }
      },
      "destinationImageUrl": "https://images.kiwi.com/photos/600x600/las-palmas_es.jpg",
      "passengerCount": 1
    }
  }
}
`;

exports[`matches expected output: CustomerBookings.graphql 1`] = `
~~~~~~~~~~ INPUT ~~~~~~~~~~
fragment RouteStopFragment on RouteStop {
  cityName
  cityId
  time {
    utc
    local
  }
}

{
  customerBookings(first: 3) {
    edges {
      node {
        id
        status
        arrival {
          ...RouteStopFragment
        }
        departure {
          ...RouteStopFragment
        }
        destinationImageUrl
        passengerCount
      }
    }
  }
}

~~~~~~~~~~ OUTPUT ~~~~~~~~~~
{
  "data": {
    "customerBookings": {
      "edges": [
        {
          "node": {
            "id": "Qm9va2luZ09uZVdheToxNjQ2MzQ0Nw==",
            "status": "closed",
            "arrival": {
              "cityName": "Las Palmas",
              "cityId": "las-palmas_es",
              "time": {
                "utc": "2018-11-28T16:20:00.000Z",
                "local": "2018-11-28T16:20:00.000Z"
              }
            },
            "departure": {
              "cityName": "Vienna",
              "cityId": "vienna_at",
              "time": {
                "utc": "2018-11-28T11:20:00.000Z",
                "local": "2018-11-28T12:20:00.000Z"
              }
            },
            "destinationImageUrl": "https://images.kiwi.com/photos/600x600/las-palmas_es.jpg",
            "passengerCount": 1
          }
        },
        {
          "node": {
            "id": "Qm9va2luZ09uZVdheTo2Nzc2Mzcy",
            "status": "confirmed",
            "arrival": {
              "cityName": "Moscow",
              "cityId": "moscow_cf_ru",
              "time": {
                "utc": "2018-10-29T12:30:00.000Z",
                "local": "2018-10-29T15:30:00.000Z"
              }
            },
            "departure": {
              "cityName": "Prague",
              "cityId": "prague_cz",
              "time": {
                "utc": "2018-10-29T07:40:00.000Z",
                "local": "2018-10-29T08:40:00.000Z"
              }
            },
            "destinationImageUrl": "https://images.kiwi.com/photos/600x600/moscow_cf_ru.jpg",
            "passengerCount": 1
          }
        },
        {
          "node": {
            "id": "Qm9va2luZ09uZVdheTo2Njc2NDE5",
            "status": "confirmed",
            "arrival": {
              "cityName": "Prague",
              "cityId": "prague_cz",
              "time": {
                "utc": "2018-10-23T06:20:00.000Z",
                "local": "2018-10-23T08:20:00.000Z"
              }
            },
            "departure": {
              "cityName": "Copenhagen",
              "cityId": "copenhagen_dk",
              "time": {
                "utc": "2018-10-23T05:00:00.000Z",
                "local": "2018-10-23T07:00:00.000Z"
              }
            },
            "destinationImageUrl": "https://images.kiwi.com/photos/600x600/prague_cz.jpg",
            "passengerCount": 3
          }
        }
      ]
    }
  }
}
`;
